--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,6 +40,7 @@ set(TEST_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/data/test_data_repository.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/data/test_data_repository_manager.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/data/test_data_representation.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/data/test_representation_converter.cpp
     # Main test runner
     ${CMAKE_CURRENT_SOURCE_DIR}/unittest.cpp)
 
